--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "breakpoint-sass": "^2.7.1",
     "browser-sync": "^2.24.7",
     "bs-rewrite-rules": "^2.1.2",
-    "fs": "0.0.1-security",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-cache": "^1.0.2",
@@ -20,10 +19,7 @@
     "gulp-imagemin": "^4.1.0",
     "gulp-plumber": "^1.2.0",
     "gulp-sass": "^4.0.1",
-    "gulp-sourcemaps": "^2.6.4",
-    "js-yaml": "^3.13.1",
-    "require-dir": "^1.2.0",
-    "run-sequence": "^2.2.1"
+    "gulp-sourcemaps": "^2.6.4"
   },
   "dependencies": {
     "natives": "^1.1.6"
